@@ -20,8 +20,10 @@ from ..conftest import (
     CQL_AVAILABLE,
     HEADER_EMBEDDING_API_KEY_OPENAI,
     IS_ASTRA_DB,
+    RUN_SHARED_SECRET_VECTORIZE_TESTS,
     SECONDARY_KEYSPACE,
     TEST_COLLECTION_NAME,
+    USE_RERANKER_API_KEY_HEADER,
     VECTORIZE_TEXTS,
     DataAPICredentials,
     DataAPICredentialsInfo,
@@ -67,12 +69,14 @@ __all__ = [
     "CQL_AVAILABLE",
     "EXTENDED_PLAYER_TYPE_NAME",
     "PLAYER_TYPE_NAME",
+    "RUN_SHARED_SECRET_VECTORIZE_TESTS",
     "SECONDARY_KEYSPACE",
     "TEST_COLLECTION_NAME",
     "THE_BYTES",
     "THE_DATETIME",
     "THE_TIMEZONE",
     "THE_TIMESTAMP",
+    "USE_RERANKER_API_KEY_HEADER",
     "VECTORIZE_TEXTS",
     "dict_equal_same_class",
     "_extended_player_from_dict",
