@@ -56,7 +56,9 @@ from .preprocess_env import (
     LOCAL_DATA_API_PASSWORD,
     LOCAL_DATA_API_TOKEN_PROVIDER,
     LOCAL_DATA_API_USERNAME,
+    RUN_SHARED_SECRET_VECTORIZE_TESTS,
     SECONDARY_KEYSPACE,
+    USE_RERANKER_API_KEY_HEADER,
 )
 
 CQL_AVAILABLE = False
@@ -348,4 +350,6 @@ __all__ = [
     "ADMIN_ENV_VARIABLE_MAP",
     "ASTRA_DB_TOKEN_PROVIDER",
     "LOCAL_DATA_API_TOKEN_PROVIDER",
+    "RUN_SHARED_SECRET_VECTORIZE_TESTS",
+    "USE_RERANKER_API_KEY_HEADER",
 ]
