@@ -9,3 +9,7 @@ export ASTRA_DB_API_ENDPOINT="https://<DB_ID>-<DB_REGION>.apps.astra.datastax.co
 # OPTIONAL. Default keyspace names if omitted. Keyspaces are created if needed.
 # export ASTRA_DB_KEYSPACE="..."
 # export ASTRA_DB_SECONDARY_KEYSPACE="..."
+
+# OPTIONAL. Comment the suppression of "shared secret" (KMS-based) vectorize test:
+# (requires a scoped API Key with name 'SHARED_SECRET_EMBEDDING_API_KEY_OPENAI' in the DB)
+export RUN_SHARED_SECRET_VECTORIZE_TESTS="no"
