@@ -6,7 +6,6 @@ export DOCKER_COMPOSE_LOCAL_DATA_API="yes"
 # Uncomment if using podman in lieu of docker:
 export DOCKER_COMMAND_NAME="podman"
 
-# RERANKER SETTINGS (uncomment and fill)
-# export ASTRAPY_FINDANDRERANK_USE_RERANKER_HEADER="yes"
-# Local runs require a DEV token as reranker API Key:
+# RERANKER SETTINGS for non-Astra runs (Optional).
+# Uncomment and supply a DEV Astra token to run the related tests:
 # export HEADER_RERANKING_API_KEY_NVIDIA="AstraCS:xyz...abc..."
