@@ -15,7 +15,6 @@ export LOCAL_CASSANDRA_CONTACT_POINT="127.0.0.1"
 # export LOCAL_DATA_API_KEYSPACE="..."
 # export LOCAL_DATA_API_SECONDARY_KEYSPACE="..."
 
-# RERANKER SETTINGS
-export ASTRAPY_FINDANDRERANK_USE_RERANKER_HEADER="y"
-# Local runs require a DEV token as reranker API Key:
-export HEADER_RERANKING_API_KEY_NVIDIA="AstraCS:[...]"
+# RERANKER SETTINGS for non-Astra runs (Optional).
+# Uncomment and supply a DEV Astra token to run the related tests:
+# export HEADER_RERANKING_API_KEY_NVIDIA="AstraCS:xyz...abc..."
