@@ -4,6 +4,7 @@ maintenance. Improvement in testing machinery:
     - Simplified keyspace management in testing.
     - Made keyspace names fully optional in all cases (typically one can forget about them).
     - Adapted/simplified README about testing.
+    - KMS-vectorize testing is now optional in the Astra base test suite.
 
 
 v 2.1.0
